# learning-fsi-aml-fraud-detection-main

./: .gitignore  Dockerfile.frontend  README.md  ThreatSight360-Analysis.md  ThreatSight360-Implementation.md  TransactionSimulator-Documentation.md  docker-compose.yml
backend/: README-RISK-MODEL.md  RISK_MODEL_MANAGEMENT_IMPLEMENTATION.md  VECTOR_SEARCH_IMPLEMENTATION.md  dependencies.py  main.py  pyproject.toml
backend/azure_foundry/: embeddings.py
backend/bedrock/: chat_completions.py  client.py  embeddings.py
backend/data/sample/: students.json
backend/db/: mongo_db.py
backend/models/: __init__.py  customer.py  fraud_pattern.py  transaction.py
backend/routes/: __init__.py  customer.py  fraud_pattern.py  model_management.py  transaction.py
backend/scripts/: create_transaction_embeddings.py  seed_data.py
backend/services/: __init__.py  fraud_detection.py  risk_model_service.py
frontend/: LEAFYGREEN-UI-GUIDE.md  next.config.mjs  package-lock.json  package.json
frontend/app/: layout.js  not-found.js  page.js
frontend/app/api/mongodb/: route.js
frontend/app/risk-models/: layout.js  page.js
frontend/app/transaction-simulator/: layout.js  page.js
frontend/components/: ClientLayout.jsx  HomepageClient.jsx  ModelAdminPanel.js  PALETTE-GUIDE.md
frontend/components/Header/: Header.jsx  Header.module.css
frontend/components/UserProfile/: UserProfile.jsx  UserProfile.module.css
frontend/components/test/: Test.jsx
frontend/components/transactionSimulator/: TransactionSimulator.jsx  TransactionSimulator.module.css  TransactionSimulatorWrapper.jsx
(+1 files in other folders)
